--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
             <li><strong>Implementación de Tienda en Línea:</strong> Configurare una tienda en línea utilizando
                 rutas optimizadas de URL para cada categoría, permitiéndole listar hasta 100 productos con imágenes,
                 descripciones detalladas
-                y opciones de pago seguras utilizando la API de del banco BAC.</li>
-            <li><strong>Integración de Pasarelas de Pago:</strong> Implementaremos la API del banco BAC para habilitar
+                y opciones de pago seguras.</li>
+            <li><strong>Integración de Pasarelas de Pago:</strong> Implementaremos habilitar
                 opciones de pago seguras y confiables, brindando a sus clientes una experiencia de compra sin problemas.
             </li>
             <li><strong>Optimización SEO:</strong> Asegurare que su sitio web esté optimizado para los motores de
@@ -184,12 +184,12 @@
                 Al finalizar los 3 meses, el mantenimiento y soporte tendrán un costo mensual y recurrente de $225, lo que asegurará que
                 su sitio web se mantenga optimizado y seguro a largo plazo.</ul>
 
-        <p>El costo total para este proyecto es de $970. Esto incluye el diseño, desarrollo,
-            configuración de la tienda en línea, integración de la API del banco BAC y capacitación. A partir del mes de
+        <p>El costo total para este proyecto es de $990. Esto incluye el diseño, desarrollo,
+            configuración de la tienda en línea, integración de la pasarela de pagos y capacitación. A partir del mes de
             Noviembre, ofrezco el servicio de mantenimiento mensual durante 3 meses para garantizar que su sitio esté
             siempre
             actualizado y funcionando de manera óptima.</p>
-        <p><strong>Condiciones de Pago:</strong> El costo total para este proyecto es de $970.
+        <p><strong>Condiciones de Pago:</strong> El costo total para este proyecto es de $990.
             Esto con un pago inicial del 50% para comenzar el desarrollo, y el 50% restante se debe abonar al completar
             el proyecto.</p>
 
